Major waybar config update/re-org

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,5 @@
-font_size 12
-font_family Inconsolata
+font_size 13
+font_family Consolas
 modify_font weight 100
 cursor_trail 2
 cursor_trail_delay 0.1 0.4
